# project-01-SQL-integration

./: README.md  adiciona-item-tabela.sql  conexao-banco.py  criar-banco.sql  criar-tabela.sql  funcoes.py  interface.py  limpar-tabela.sql  mostra-tabela.sql  pyproject.toml  teste.ipynb
